--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.FoodApp"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.NotificationActivity"
+            android:name=".Activity.EditActivity"
             android:exported="false" />
         <activity
             android:name=".Activity.PaymentActivity"
